# mprsync

./: .flake8  .gitignore  README.md  mprsync.sh  prsync.sh  pycode-check.sh  pyproject.toml  pyrightconfig.json  requirements.txt
mprsync/: mprsync.py  sync.py
