[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mprsync"
version = "0.9.3"
authors = [
    { name = "Sumedh Wale", email = "sumwale@yahoo.com" }
]
description = "Run multiple rsync processes in parallel for local/remote data sync"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["Multiprocess rsync", "Parallel rsync", "rsync"]

[project.urls]
Homepage = "https://github.com/sumwale/mprsync"
Issues = "https://github.com/sumwale/mprsync/issues"

[project.scripts]
mprsync = "mprsync.sync:main"
